# ForceEngine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Implement Shader System.md  LICENSE  README.md
.claude/: settings.local.json
Assets/Shaders/: Atmosphere.frag  Atmosphere.vert  ClusterBuild.comp  ClusterCull.comp  CompileShaders.bat  DDGIUpdate.comp  Debug.vert  PBR.frag  PBR.vert  Particles.comp  Shadow.vert  Terrain.frag  Terrain.vert  TerrainBrush.comp
Assets/Shaders/Compiled/: Atmosphere.frag.spv  Atmosphere.vert.spv  ClusterBuild.comp.spv  ClusterCull.comp.spv  DDGIUpdate.comp.spv  Debug.vert.spv  PBR.frag.spv  PBR.vert.spv  Particles.comp.spv  Shadow.vert.spv  Terrain.frag.spv  Terrain.vert.spv  TerrainBrush.comp.spv
Editor/: CMakeLists.txt
Editor/Include/: EditorApp.h  EditorLayer.h
Editor/Source/: EditorApp.cpp  EditorLayer.cpp
Engine/: CMakeLists.txt
Engine/Include/Force/Animation/: AnimNotify.h  AnimationClip.h  AnimationStateMachine.h  Skeleton.h  Socket.h
Engine/Include/Force/Asset/: Asset.h  AssetImporter.h  AssetRegistry.h  AssetTypes.h  MeshAsset.h  TextureAsset.h
Engine/Include/Force/Audio/: AudioEngine.h  AudioSource.h
Engine/Include/Force/Core/: Application.h  Assert.h  Base.h  CVar.h  ECS.h  Engine.h  Event.h  Logger.h  Module.h  Subsystem.h  Types.h
Engine/Include/Force/Core/Memory/: Allocators.h  Memory.h
Engine/Include/Force/Editor/: ContentBrowserPanel.h  EditorCamera.h  EditorLayer.h  MaterialGraphPanel.h  NodeGraphEditor.h  OutputLogPanel.h  PropertiesPanel.h  SceneHierarchyPanel.h  UndoRedo.h  ViewportGizmo.h  Widgets.h
Engine/Include/Force/Material/: MaterialGraph.h
Engine/Include/Force/Math/: Math.h
Engine/Include/Force/Physics/: CharacterController.h  DestructionSystem.h  PhysicsBody.h  PhysicsDebugRenderer.h  PhysicsEngine.h
Engine/Include/Force/Platform/: Input.h  KeyCodes.h  Platform.h  Window.h
Engine/Include/Force/Renderer/: AtmosphereRenderer.h  ClusteredLighting.h  DDGISystem.h  DebugRenderer.h  DecalSystem.h  FrustumCuller.h  LightTypes.h  Material.h  MaterialInstance.h  Mesh.h  ParticleSystem.h  RenderGraph.h  Renderer.h  RendererTypes.h  Shader.h  ShadowSystem.h  StaticMeshRenderer.h  Texture.h  VulkanBuffer.h  VulkanCommandBuffer.h  VulkanContext.h  VulkanDevice.h  VulkanPipeline.h  VulkanSwapchain.h
Engine/Include/Force/Scene/: Components.h  SceneSerializer.h
Engine/Include/Force/Terrain/: TerrainPainter.h  TerrainSculptor.h  TerrainSystem.h
Engine/Include/Force/VFX/: VFXGraph.h
Engine/Source/Animation/: AnimNotify.cpp  AnimationClip.cpp  AnimationStateMachine.cpp  Skeleton.cpp  Socket.cpp
Engine/Source/Asset/: AssetImporter.cpp  AssetRegistry.cpp  MeshAsset.cpp
Engine/Source/Audio/: AudioEngine.cpp  AudioSource.cpp
Engine/Source/Core/: Application.cpp  CVar.cpp  ECS.cpp  Engine.cpp  Event.cpp  Logger.cpp  Module.cpp  Subsystem.cpp
Engine/Source/Core/Memory/: Allocators.cpp
Engine/Source/Editor/: ContentBrowserPanel.cpp  EditorCamera.cpp  EditorLayer.cpp  MaterialGraphPanel.cpp  NodeGraphEditor.cpp  OutputLogPanel.cpp  PropertiesPanel.cpp  SceneHierarchyPanel.cpp  UndoRedo.cpp  ViewportGizmo.cpp  Widgets.cpp
Engine/Source/Material/: MaterialGraph.cpp
Engine/Source/Physics/: CharacterController.cpp  DestructionSystem.cpp  PhysicsBody.cpp  PhysicsDebugRenderer.cpp  PhysicsEngine.cpp
Engine/Source/Platform/: Input.cpp  Platform.cpp  Window.cpp
Engine/Source/Renderer/: AtmosphereRenderer.cpp  ClusteredLighting.cpp  DDGISystem.cpp  DebugRenderer.cpp  DecalSystem.cpp  FrustumCuller.cpp  Material.cpp  MaterialInstance.cpp  Mesh.cpp  ParticleSystem.cpp  RenderGraph.cpp  Renderer.cpp  Shader.cpp  ShadowSystem.cpp  StaticMeshRenderer.cpp  Texture.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanSwapchain.cpp
Engine/Source/Scene/: SceneSerializer.cpp
Engine/Source/Terrain/: TerrainPainter.cpp  TerrainSculptor.cpp  TerrainSystem.cpp
Engine/Source/VFX/: VFXGraph.cpp
Runtime/: CMakeLists.txt
Runtime/Include/: RuntimeApp.h
Runtime/Source/: RuntimeApp.cpp
Scripts/: Build.bat  Clean.bat  Regenerate.bat  Run.bat  Setup.bat
